add unnecessary epigraph

--- a/latex_report/main.tex
+++ b/latex_report/main.tex
@@ -2,6 +2,7 @@
 %
 %
 \usepackage{counttexruns}
+\usepackage{epigraph}
 %%%%%%%%% Preamble file %%%%%%%%%%%%%%
 \input{preamble}
 \include{include/newCommands}
